output.txt
make: Entrando no diretório '/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/build'

[ 16%] Built target ggml-base
[ 45%] Built target ggml-cpu
[ 49%] Built target ggml
[ 52%] Built target whisper
[ 54%] Building CXX object CMakeFiles/IdeaWalker.dir/main.cpp.o
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/app/IdeaWalkerApp.hpp:10,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/main.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:267:1: error: stray ‘`’ in program
  267 | ```
      | ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:267:2: error: stray ‘`’ in program
  267 | ```
      |  ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:267:3: error: stray ‘`’ in program
  267 | ```
      |   ^
make[2]: *** [CMakeFiles/IdeaWalker.dir/build.make:79: CMakeFiles/IdeaWalker.dir/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:247: CMakeFiles/IdeaWalker.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
make: Saindo do diretório '/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/build'

